Spacing issues for widgets in site-origin https://github.com/proudcity/wp-proudcity/issues/824

--- a/app/pattern-scss/_overlay.scss
+++ b/app/pattern-scss/_overlay.scss
@@ -68,10 +68,11 @@ body {
     z-index: $nav-user-overlay-z + 1;
     top: $search-top-mobile + 5;
     padding-right: 0;
-    left: $jumbotron-padding;
+    left: $jumbotron-padding/2;
     right: $jumbotron-padding * 2;
     margin-top: 0!important;
-    -webkit-filter: #{"blur(0.0000"}#{"001px)"};
+    // Since we're doing normal positioning no longer needed
+    // -webkit-filter: #{"blur(0.0000"}#{"001px)"};
     bottom: 70px;
   }
 
