--- a/app/pattern-scss/wp/_widget-proud-jumbotron-header.scss
+++ b/app/pattern-scss/wp/_widget-proud-jumbotron-header.scss
@@ -1,5 +1,9 @@
 $jumbotron-header-margin-bottom: $page-section-spacing!default;
 
 .widget-proud-jumbotron-header {
-  margin-bottom: $jumbotron-header-margin-bottom;
+  &, .panel-grid-cell & {
+    &:last-child {
+      margin-bottom: $jumbotron-header-margin-bottom!important;
+    }
+  }
 }
